--- a/client/MEANEcommerce/src/app/registration/registration.component.html
+++ b/client/MEANEcommerce/src/app/registration/registration.component.html
@@ -25,7 +25,7 @@
             </div>
             <div class="form-check">
               <label class="form-check-label">
-                <input type="checkbox" name="isSeller" class="form-check-input" [(ngModel)]="isSeller"> Register as Seller</label>
+                <input type="checkbox" name="isSeller" class="form-check-input" [(ngModel)]="isSeller"> Register as Seller
               </label>
             </div>
             <hr>
