--- a/client/MEANEcommerce/src/app/registration/registration.component.html
+++ b/client/MEANEcommerce/src/app/registration/registration.component.html
@@ -29,7 +29,7 @@
               </label>
             </div>
             <hr>
-            <button class="btn btn-primary btn-block" (click)="register" [disabled]="btnDisabled">Register</button>
+            <button class="btn btn-primary btn-block" (click)="register()" [disabled]="btnDisabled">Register</button>
           </form>
         </div>
       </div>
